--- a/android/build.gradle
+++ b/android/build.gradle
@@ -52,6 +52,7 @@ android {
 repositories {
     google()
     mavenCentral()
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
@@ -63,6 +64,11 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.9.22'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
+
+    // AndroidPdfViewer - pdfium-based PDF rendering with native performance
+    // Using TalbotGooday's fork which is migrated to AndroidX
+    // https://github.com/TalbotGooday/AndroidPdfViewer
+    implementation 'com.github.TalbotGooday:AndroidPdfViewer:3.1.0-beta.3'
 
     testImplementation "junit:junit:$junitVersion"
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
