Add Android drawable resources and update gitignore
- Add ic_pills.xml drawable for FAB medication button
- Update .gitignore to properly exclude .idea/ and android/build/
- Update package-lock.json

--- a/.gitignore
+++ b/.gitignore
@@ -25,10 +25,10 @@ Pods/
 *.iml
 .gradle
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
+.idea/
 .DS_Store
 /build
+android/build/
 /captures
 .externalNativeBuild
 
